centre image on preview

--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,10 @@ body {
 }
 /*Database image and label error setting*/
 #yourimage {
-    width: 25%;
+    width: 60%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 .images {
     width: 90%;
