--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,9 @@ body {
 /*Database image and label error setting*/
 #yourimage {
     width: 25%;
+display:block;
+margin-left:auto;
+margin-right:auto;â‰
 }
 .images {
     width: 90%;
