--- a/css/collapse.css
+++ b/css/collapse.css
@@ -1,6 +1,6 @@
 /* Main Title Top of the page*/
 h2.pageTitle {
-	text-transform:uppercase;
+/*	text-transform:uppercase;*/
 	background:#373737;
 	background-size: 5px 5px;
 	/*border-bottom:1px solid #aaa;*/
@@ -9,7 +9,7 @@ h2.pageTitle {
 	margin:0;
 	padding:0;
 	/*text-shadow: 0 1px 0 #fff;*/
-	font-weight:normal;
+    /*font-weight:normal;*/
 }
 h2.pageTitle span {
 	display:block;
@@ -19,14 +19,15 @@ h2.pageTitle span {
 	margin-top:5px;
 	width:80px;
 	height:80px;
-	padding:8px;
+	padding:5px;
+    margin-left:10px;
 }
 .title2 {
 	font-size:10px;
 	color:#ff0;
 }
 .title1 {
-	font-size:15px;
+	font-size:14px;
 	line-height:0px;
 	font-weight:700;
 }
