--- a/css/main.css
+++ b/css/main.css
@@ -1,138 +1,169 @@
 /*
-html{
-    height:100%
-}
+        html{
+            height:100%
+        }
 */
-html {
-    font-family:'Lato', sans-serif;
-    height: auto;
-    /*            background-size:cover;*/
-}
-body {
-    height:100%;
-    margin:0;
-    padding:0;
-    background-color:#CCC;
-}
-/*overlay style on the google map (the login page)*/
-#overlay {
-    /*position:absolute;*/
-    top:0;
-    left:0;
-    width:100%;
-    background:#000;
-    opacity:0.5;
-}
-#modal {
-    /*position:absolute;*/
-    background:url(../image/tint20.png) 0 0 repeat;
-    background:rgba(0, 0, 0, 0.2);
-    border-radius: 14px;
-    padding:8px;
-}
-#content {
-    border-radius:8px;
-    background:#fff;
-    padding:20px;
-}
-#close {
-    position:absolute;
-    background:url(../image/close.png) 0 0 repeat;
-    width:24px;
-    height:27px;
-    display:block;
-    text-indent:-9999px;
-    top:-7px;
-    right:-7px;
-}
-/* Old map version */
-#map {
-    position:absolute;
-    height:100%;
-    width:100%;
-    margin:auto;
-    overflow:hidden;
-}
-/* New Map Gmap3 */
-#newmap {
-    position:absolute;
-    height:100%;
-    width:100%;
-    margin:auto;
-    /*          overflow:hidden;*/
-}
-.fileUpload {
-    height:56px;
-}
-/* input field transprent */
-.fileUpload input.upload {
-    overflow:hidden;
-    opacity:0;
-    height:100%;
-    width:100%;
-}
+        html {
+            
+            font-family: 'Lato', sans-serif;
+            height: auto;
+/*            background-size:cover;*/
+             }
+
+        body {
+            height:100%;
+            margin:0;
+            padding:0;
+            background-color:#CCC;            
+        }
+                   
+        /*overlay style on the google map (the login page)*/
+        #overlay {
+            /*position:absolute;*/
+            top:0;
+            left:0;
+            width:100%;
+            background:#000;
+            opacity:0.5;
+        }
+        
+        #modal{
+            /*position:absolute;*/
+            background:url(../image/tint20.png) 0 0 repeat;
+            background:rgba(0,0,0,0.2);
+            border-radius: 14px;
+            padding:8px;
+        }
+            
+        #content{
+            border-radius:8px;
+            background:#fff;
+            padding:20px;
+        }
+            
+        #close{
+            position:absolute;
+            background:url(../image/close.png) 0 0 repeat;
+            width:24px;
+            height:27px;
+            display:block;
+            text-indent:-9999px;
+            top:-7px;
+            right:-7px;
+        }
+            
+        /* Old map version */
+        #map{
+            position:absolute;
+            height:100%;
+            width:100%;
+            margin-left:0;
+            margin-right:0;
+            padding:0;
+            overflow:hidden;
+        }
+
+        /* New Map Gmap3 */
+        #newmap
+            {
+            position:absolute;
+            height:100%;
+            width:100%;
+            margin:auto;
+/*          overflow:hidden;*/
+        }
+            
+        .fileUpload{ 
+            height:56px;
+        }
+            
+        /* input field transprent */
+        .fileUpload input.upload{
+            overflow:hidden;
+            opacity:0;
+            height:100%;
+            width:100%;
+        }
+ 
 /*Dialogue is for slide down background*/
-.ui-dialog {
-    background-color:#222 !important;
-    background-size: 20px 20px !important;
-}
-.ui-dialog .ui-dialog-contain {
-    margin-top: 0 !important;
-}
+        
+        .ui-dialog{
+            background-color:#222 !important;
+            background-size: 20px 20px !important;
+        }
+        
+        .ui-dialog .ui-dialog-contain{
+            margin-top: 0 !important;
+        }
+
+        
 /*Database image and label error setting*/
-#yourimage {
-    width: 50%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-.images {
-    width: 90%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-label.error {
-    color: red;
-    font-size: 16px;
-    font-weight: normal;
-    line-height: 1.4;
-    padding-left: 5px
-}
+        #yourimage {
+        width: 25%;
+        }
+
+        img {
+        width: 75%;
+        }
+
+        label.error {
+        color: red; 
+        font-size: 16px;
+        font-weight: normal;
+        line-height: 1.4;
+        padding-left: 5px
+        }
+
+        /*Customize footer*/
+        
+        /*Background footer color*/
+        .my-footer{
+        background:rgba(0, 0, 0, 0.83);
+        }        
+        /* a text */
+        .my-footer ul li a {
+        border-color:#1f1f1f;
+        text-decoration:none;        
+        text-align:center;
+        display: block;
+        color: #fff;
+        font-family: "Roboto", sans-serif;
+        font-size: 1em;
+        }
+
+        .my-footer ul li a:hover{
+        background:rgba(157, 157, 157, 0.49);
+        }
+
+        .my-footer ul li:nth-child(1) {
+        border-top-color:#2ecc71;
+        }
+
+        
+        
 /*    
 
-#panel {
-    position: absolute;
-    top: 5px;
-    left: 50%;
-    margin-left: -180px;
-    z-index: 5;
-    background-color: #f00;
-    padding: 5px;
-    border: 1px solid #999;
-  }
-#photo-panel{
-    background: #fff;
-    padding:5px;
-    overflow-y:auto;
-    overflow-x:hidden;
-    width:200px;
-    max-height:300px;
-    font-size:14px;
-    font-family:Arial;
-    border:1px solid #ccc;
-    box-shadow: -2px 2px 2px rgba(33,33,33,0.4);
-    display:none;
-}           
+      #panel {
+            position: absolute;
+            top: 5px;
+            left: 50%;
+            margin-left: -180px;
+            z-index: 5;
+            background-color: #f00;
+            padding: 5px;
+            border: 1px solid #999;
+          }
+        #photo-panel{
+            background: #fff;
+            padding:5px;
+            overflow-y:auto;
+            overflow-x:hidden;
+            width:200px;
+            max-height:300px;
+            font-size:14px;
+            font-family:Arial;
+            border:1px solid #ccc;
+            box-shadow: -2px 2px 2px rgba(33,33,33,0.4);
+            display:none;
+        }           
 */
-
-img.class {
-/*
-    width: 100px;
-    height: 100px;
-*/
-    width: 30%;
-    height: 30%;
-    padding: 5px;
-    /*width: 25%;*/
-}
