--- a/css/main.css
+++ b/css/main.css
@@ -118,9 +118,8 @@ img.class {
     width: 30%;
     padding: 5px;
     margin-left: auto;
+    margin-right: auto;
 }
-
-
         label.error {
         color: red; 
         font-size: 16px;
