--- a/css/weather/weather.css
+++ b/css/weather/weather.css
@@ -1,12 +1,3 @@
-/*
-  Docs at http://http://simpleweatherjs.com
-
-  Look inspired by http://www.degreees.com/
-  Used for demo purposes.
-
-  Weather icon font from http://fonts.artill.de/collection/artill-weather-icons
-*/
-
 @font-face {
     font-family: 'weather';
     src: url('https://dl.dropboxusercontent.com/u/2086809/weatherfont/artill_clean_icons-webfont.eot');
@@ -24,6 +15,43 @@ body {
   padding: 0px 0;
   font: 13px 'Open Sans', "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
+
+/*Starting part of OpenWeather JS*/
+
+.weather-wrapper {
+/*	margin: 5% 0 5% 5%;*/
+/*	padding: 40px 5%;*/
+/*	float: left;*/
+	color: white;
+	text-align:center;
+}
+
+.weather-icon{
+    width:auto;
+}
+
+strong {
+	color:#fff;
+}
+
+.capitalize {
+	text-transform: capitalize;
+}
+
+.weather-temperature{
+  margin: 0 0 8px;
+  color: #fff;
+  font-size: 100px;
+  font-weight: 300;
+  text-align: center;
+  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.15)
+}
+
+.hide {
+	display: none;
+}
+
+/*End part of OpenWeather JS*/
 
 #weather {
   width: auto;
@@ -166,7 +194,7 @@ body {
 #weather li {
   background: #fff;
   background: rgba(255,255,255,0.90);
-  padding: 16px;
+  padding: 5px;
   display: inline-block;
   border-radius: 5px;
   margin: 10px;
