--- a/css/main.css
+++ b/css/main.css
@@ -3,158 +3,136 @@
             height:100%
         }
 */
-        html {
-            
-            font-family: 'Lato', sans-serif;
-            height: auto;
-/*            background-size:cover;*/
-             }
-
-        body {
-            height:100%;
-            margin:0;
-            padding:0;
-            background-color:#CCC;            
-        }
-                   
-        /*overlay style on the google map (the login page)*/
-        #overlay {
-            /*position:absolute;*/
-            top:0;
-            left:0;
-            width:100%;
-            background:#000;
-            opacity:0.5;
-        }
-        
-        #modal{
-            /*position:absolute;*/
-            background:url(../image/tint20.png) 0 0 repeat;
-            background:rgba(0,0,0,0.2);
-            border-radius: 14px;
-            padding:8px;
-        }
-            
-        #content{
-            border-radius:8px;
-            background:#fff;
-            padding:20px;
-        }
-            
-        #close{
-            position:absolute;
-            background:url(../image/close.png) 0 0 repeat;
-            width:24px;
-            height:27px;
-            display:block;
-            text-indent:-9999px;
-            top:-7px;
-            right:-7px;
-        }
-            
-        /* Old map version */
-        #map{
-            position:absolute;
-            height:100%;
-            width:100%;
-            margin-left:0;
-            margin-right:0;
-            padding:0;
-            overflow:hidden;
-        }
-
-        /* New Map Gmap3 */
-        #newmap
-            {
-            position:absolute;
-            height:100%;
-            width:100%;
-            margin:auto;
-/*          overflow:hidden;*/
-        }
-            
-        .fileUpload{ 
-            height:56px;
-        }
-            
-        /* input field transprent */
-        .fileUpload input.upload{
-            overflow:hidden;
-            opacity:0;
-            height:100%;
-            width:100%;
-        }
- 
+ html {
+    font-family:'Lato', sans-serif;
+    height: auto;
+    /*            background-size:cover;*/
+}
+body {
+    height:100%;
+    margin:0;
+    padding:0;
+    background-color:#CCC;
+}
+/*overlay style on the google map (the login page)*/
+ #overlay {
+    /*position:absolute;*/
+    top:0;
+    left:0;
+    width:100%;
+    background:#000;
+    opacity:0.5;
+}
+#modal {
+    /*position:absolute;*/
+    background:url(../image/tint20.png) 0 0 repeat;
+    background:rgba(0, 0, 0, 0.2);
+    border-radius: 14px;
+    padding:8px;
+}
+#content {
+    border-radius:8px;
+    background:#fff;
+    padding:20px;
+}
+#close {
+    position:absolute;
+    background:url(../image/close.png) 0 0 repeat;
+    width:24px;
+    height:27px;
+    display:block;
+    text-indent:-9999px;
+    top:-7px;
+    right:-7px;
+}
+/* Old map version */
+ #map {
+    position:absolute;
+    height:100%;
+    width:100%;
+    margin-left:0;
+    margin-right:0;
+    padding:0;
+    overflow:hidden;
+}
+/* New Map Gmap3 */
+ #newmap {
+    position:absolute;
+    height:100%;
+    width:100%;
+    margin:auto;
+/*    overflow:hidden;*/
+}
+.fileUpload {
+    height:56px;
+}
+/* input field transprent */
+ .fileUpload input.upload {
+    overflow:hidden;
+    opacity:0;
+    height:100%;
+    width:100%;
+}
 /*Dialogue is for slide down background*/
-        
-        .ui-dialog{
-            background-color:#222 !important;
-            background-size: 20px 20px !important;
-        }
-        
-        .ui-dialog .ui-dialog-contain{
-            margin-top: 0 !important;
-        }
-
-        
-/*Database image and label error setting*/
-       #yourimage {
+ .ui-dialog {
+    background-color:#222 !important;
+    background-size: 20px 20px !important;
+}
+.ui-dialog .ui-dialog-contain {
+    margin-top: 0 !important;
+}
+/* Display image preview in photo form */
+ #yourimage {
     width: 50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+/* for images on map */
 .images {
     width: 90%;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+/* for previewing images in gallery page */
 img.class {
-/*
     width: 100px;
     height: 100px;
-*/
-    width: 30%;
-    padding: 5px;
+    padding: 2px;
     margin-left: auto;
     margin-right: auto;
 }
-        label.error {
-        color: red; 
-        font-size: 16px;
-        font-weight: normal;
-        line-height: 1.4;
-        padding-left: 5px
-        }
+/* style for form validation which im not using anymore... */
+label.error {
+    color: red;
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 1.4;
+    padding-left: 5px
+}
+/*Customize footer*/
 
-        /*Customize footer*/
-        
-        /*Background footer color*/
-        .my-footer{
-        background:rgba(0, 0, 0, 0.83);
-        }        
-        /* a text */
-        .my-footer ul li a {
-        border-color:#1f1f1f;
-        text-decoration:none;        
-        text-align:center;
-        display: block;
-        color: #fff;
-        font-family: "Roboto", sans-serif;
-        font-size: 1em;
-        }
-
-        .my-footer ul li a:hover{
-        background:rgba(157, 157, 157, 0.49);
-        }
-
-        .my-footer ul li:nth-child(1) {
-        border-top-color:#2ecc71;
-        }
-
-        
-        
+/*Background footer color*/
+ .my-footer {
+    background:rgba(0, 0, 0, 0.83);
+}
+/* a text */
+ .my-footer ul li a {
+    border-color:#1f1f1f;
+    text-decoration:none;
+    text-align:center;
+    display: block;
+    color: #fff;
+    font-family:"Roboto", sans-serif;
+    font-size: 1em;
+}
+.my-footer ul li a:hover {
+    background:rgba(157, 157, 157, 0.49);
+}
+.my-footer ul li:nth-child(1) {
+    border-top-color:#2ecc71;
+}
 /*    
 
       #panel {
